@@ -5,6 +5,7 @@ to Subversion revision numbers (rXXXXX).
 WinMerge 2.7.7.5
   Cleaning up Help-menu (#1875111)
   Right-align tab size number in editor options (r5037)
+  Move Time difference ignore -option to compare options (#1892283)
   BugFix: Potential lockup in folder compare (#1865131, #1889907)
   BugFix: Line filter didn't filter non-ascii lines correctly (#1880628)
   BugFix: GNU General Public License name in menu (#1868989)
